5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1811_2567.log
== TEST (2019-06-11 18:40:53) 
-- CODE:
from numpy import*
v=array(eval(input("digite um numero: ")))
c1 = 0
c2 = 0
while(size(v)>0):
	for i in v:
		d = v[-1] - 1
		c1 = c1 + 1
	print(c1)
	for i in v:
		s = v[0] + 1
		c2 = c2 + 1
	print(c2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:41:15) 
-- CODE:
from numpy import*
v=array(eval(input("digite um numero: ")))
c1 = 0
c2 = 0
while(size(v)>0):
	for i in range(v):
		d = v[-1] - 1
		c1 = c1 + 1
	print(c1)
	for i in v:
		s = v[0] + 1
		c2 = c2 + 1
	print(c2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite um numero: ")))
c1 = 0
c2 = 0
while(size(v)>0):
	for i in range(v):
		d = v[-1] - 1
		c1 = c1 + 1
	print(c1)
	for i in range(v):
		s = v[0] + 1
		c2 = c2 + 1
	print(c2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:42:59) 
-- CODE:
from numpy import*
v=array(eval(input("digite um numero: ")))
c1 = 0
c2 = 0
while(size(v)>0):
	for i in range(v):
		d = v[i-j] - 1
		c1 = c1 + 1
	print(c1)
	for i in range(v):
		s = v[0] + 1
		c2 = c2 + 1
	print(c2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:46:21) 
-- CODE:
v= int(input("Digite um n: "))
str(v)
c1 = 0
c2 = 0
for i in range(v):
	d = v - 1
	c1 = c1 + 1
print(c1)
for i in range(v):
	s = v + 1
	c2 = c2 + 1
print(c2)

-- OUTPUT:
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:46:34) 
-- CODE:
v= int(input("Digite um n: "))
str(v)
c1 = 0
c2 = 0
for i in range(v):
	d = v - 1
	c1 = c1 + 1
print(c1)
for i in range(v):
	s = v + 1
	c2 = c2 + 1
print(c2)

-- OUTPUT:
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:46:47) 
-- CODE:
v= int(input("Digite um n: "))
str(v)
c1 = 0
c2 = 0
for i in range(v):
	d = v - 1
	c1 = c1 + 1
	print(c1)
for i in range(v):
	s = v + 1
	c2 = c2 + 1
print(c2)

-- OUTPUT:
1
2
3
4
5
6
7
8
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:47:02) 
-- CODE:
v= int(input("Digite um n: "))
str(v)
c1 = 0
c2 = 0
for i in range(v):
	d = v - 1
	c1 = c1 + 1
	print(c1)
for i in range(v):
	s = v + 1
	c2 = c2 + 1
	print(c2)

-- OUTPUT:
1
2
3
4
5
6
7
8
1
2
3
4
5
6
7
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:48:02) 
-- CODE:
v= int(input("Digite um n: "))
str(v) = *
c1 = 0
c2 = 0
for i in range(v):
	d = v - 1
	c1 = c1 + 1
	print(c1)
for i in range(v):
	s = v + 1
	c2 = c2 + 1
	print(c2)

-- ERROR:
File "XXXX", line 2
    str(v) = *
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:48:25) 
-- CODE:
v= int(input("Digite um n: "))
str(v) 
c1 = 0
c2 = 0
for i in range(v):
	d = str(v) - 1
	c1 = c1 + 1
	print(c1)
for i in range(v):
	s = v + 1
	c2 = c2 + 1
	print(c2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    d = str(v) - 1
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:48:53) 
-- CODE:
v= int(input("Digite um n: "))
str(v) 
print(str(v))

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:06) 
-- CODE:
v= int(input("Digite um n: "))
str(v) 
print(str(*))

-- ERROR:
File "XXXX", line 3
    print(str(*))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:18) 
-- CODE:
v= int(input("Digite um n: "))
str(v) = "*"
print(str()

-- ERROR:
File "XXXX", line 4
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:27) 
-- CODE:
v= int(input("Digite um n: "))
str(v) = "*"
print(str(v)

-- ERROR:
File "XXXX", line 4
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:31) 
-- CODE:
v= int(input("Digite um n: "))
str(v) = "*"
print(str(v))

-- ERROR:
File "XXXX", line 2
    str(v) = "*"
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:49:53) 
-- CODE:
v= int(input("Digite um n: "))
v= "*"
str(v)
print(str(v))

-- OUTPUT:
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:51:07) 
-- CODE:
v= int(input("Digite um n: "))
v= "*"
str(v)
o = v * v
print(str(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    o = v * v
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:52:08) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
v= "*"
str(v)
o = v * size(v)
print(o)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:03:21) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(1,0,-1):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:04:12) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:05:04) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)
for i in range(1,a+1,v):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:05:11) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)
for i in range(1,v+1,v):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:05:45) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)
for i in range(1,v+1,v):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:06:18) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)
for i in range(1,v+1,0):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:06:27) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)
for i in range(1,v+1,1):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:06:39) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)
for i in range(1,v+1,1):
	print("*"*i)

-- EXECUTION TIME:
0.928589
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:09:10) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)
for i in range(1,0,v+1):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 19:09:21) 
-- CODE:
from numpy import*
v= int(input("Digite um n: "))
for i in range(v,0,-1):
	print("*"*i)
for i in range(1,0,+1):
	print("*"*i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
